-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: core-libs
java.lang.IncompatibleClassChangeError
at VarHandleTestAccessBoolean$$Lambda$108/0x000000080011cc40.run(<Unknown>:1000008)
at VarHandleBaseTest.checkWithThrowable(VarHandleBaseTest.java:126)
at VarHandleBaseTest.checkUOE(VarHandleBaseTest.java:50)
at VarHandleTestAccessBoolean.testValueTypeFieldUnsupported(VarHandleTestAccessBoolean.java:317)
at VarHandleTestAccessBoolean.lambda$accessTestCaseProvider$12(VarHandleTestAccessBoolean.java:221)
at VarHandleTestAccessBoolean$$Lambda$49/0x0000000800103c40.action(<Unknown>:1000004)
at VarHandleBaseTest$AccessTestCase.testAccess(VarHandleBaseTest.java:408)
at VarHandleTestAccessBoolean.testAccess(VarHandleTestAccessBoolean.java:234)
UOE is thrown as expected when lambda is not involved.
java.lang.UnsupportedOperationException
at java.base/java.lang.invoke.VarForm.getMemberName(VarForm.java:92)
at java.base/java.lang.invoke.VarHandleGuards.guard_LI_V(VarHandleGuards.java:114)
at VarHandleTestAccessBoolean.testValueTypeFieldUnsupported(VarHandleTestAccessBoolean.java:311)
at VarHandleTestAccessBoolean.lambda$accessTestCaseProvider$12(VarHandleTestAccessBoolean.java:221)
at VarHandleTestAccessBoolean$$Lambda$49/0x0000000800103c40.action(<Unknown>:1000004)
at VarHandleBaseTest$AccessTestCase.testAccess(VarHandleBaseTest.java:408)
at VarHandleTestAccessBoolean.testAccess(VarHandleTestAccessBoolean.java:234)
at VarHandleTestAccessBoolean$$Lambda$108/0x000000080011cc40.run(<Unknown>:1000008)
at VarHandleBaseTest.checkWithThrowable(VarHandleBaseTest.java:126)
at VarHandleBaseTest.checkUOE(VarHandleBaseTest.java:50)
at VarHandleTestAccessBoolean.testValueTypeFieldUnsupported(VarHandleTestAccessBoolean.java:317)
at VarHandleTestAccessBoolean.lambda$accessTestCaseProvider$12(VarHandleTestAccessBoolean.java:221)
at VarHandleTestAccessBoolean$$Lambda$49/0x0000000800103c40.action(<Unknown>:1000004)
at VarHandleBaseTest$AccessTestCase.testAccess(VarHandleBaseTest.java:408)
at VarHandleTestAccessBoolean.testAccess(VarHandleTestAccessBoolean.java:234)
UOE is thrown as expected when lambda is not involved.
java.lang.UnsupportedOperationException
at java.base/java.lang.invoke.VarForm.getMemberName(VarForm.java:92)
at java.base/java.lang.invoke.VarHandleGuards.guard_LI_V(VarHandleGuards.java:114)
at VarHandleTestAccessBoolean.testValueTypeFieldUnsupported(VarHandleTestAccessBoolean.java:311)
at VarHandleTestAccessBoolean.lambda$accessTestCaseProvider$12(VarHandleTestAccessBoolean.java:221)
at VarHandleTestAccessBoolean$$Lambda$49/0x0000000800103c40.action(<Unknown>:1000004)
at VarHandleBaseTest$AccessTestCase.testAccess(VarHandleBaseTest.java:408)
at VarHandleTestAccessBoolean.testAccess(VarHandleTestAccessBoolean.java:234)
- duplicates
-
JDK-8207238 [lworld] ValueConstructorRef fails with ICCE with ValueTypes Consistency checking
-
- Closed
-
- relates to
-
JDK-8207401 [lworld] TestLWorld.java crashes java_lang_String::create_from_symbol
-
- Resolved
-
-
JDK-8207315 [lworld] Examine class file generators in JDK that may need upgrade to support LWorld
-
- Resolved
-