8207194: [lworld] Update InnerClassLambdaMetafactory to add ValueTypes attribute in generated class

Reviewed-by: forax, hseigel