src/java.base/share/classes/java/lang/Class.java
@@ -58,6 +58,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.StringJoiner;
 
 import jdk.internal.HotSpotIntrinsicCandidate;
@@ -458,7 +459,6 @@ public final class Class<T> implements java.io.Serializable,
      * Returns {@code true} if this class is a value class.
      *
      * @return {@code true} if this class is a value class.
-     * @since 11
      */
     public boolean isValue() {
         int mods = this.getModifiers();
@@ -473,6 +473,29 @@ public final class Class<T> implements java.io.Serializable,
         }
         return false;
     }
+
+    /**
+     * Returns the names listed in the {@code "ValueTypes"} attribute.
+     */
+    Set<String> getDeclaredValueTypeNames() {
+        Set<String> names = declaredValueTypeNames;
+        if (names == null) {
+            String[] lvts = getLocalValueTypes0();
+            if (lvts != null) {
+                for (int i=0; i < lvts.length; i++) {
+                    lvts[i] = lvts[i].replace('/', '.');
+                }
+                names = Set.of(lvts);
+            } else {
+                names = Set.of();
+            }
+            declaredValueTypeNames = names;
+        }
+        return names;
+    }
+
+    private transient Set<String> declaredValueTypeNames;
+    private native String[] getLocalValueTypes0();
 
     /**
      * Creates a new instance of the class represented by this {@code Class}
